force-app/main/default/objects/FuzzyPicklistMatch__mdt/FuzzyPicklistMatch__mdt.object-meta.xml
<CustomObject>
    <label>FuzzyPicklist Match</label>
    <pluralLabel>FuzzyPicklist Matches</pluralLabel>
</CustomObject>