force-app/main/default/objects/FuzzyPicklistMatch__mdt/fields/Free_Text_Value__c.field-meta.xml
<CustomField>
    <fullName>Free_Text_Value__c</fullName>
    <label>Free Text Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>