force-app/main/default/objects/FuzzyPicklistMatch__mdt/fields/FuzzyPicklist__c.field-meta.xml
<CustomField>
    <fullName>FuzzyPicklist__c</fullName>
    <description>The picklist that this match belongs to</description>
    <label>FuzzyPicklist</label>
    <referenceTo>FuzzyPicklist__mdt</referenceTo>
    <relationshipName>FuzzyPicklistValues</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>