force-app/main/default/objects/FuzzyPicklistMatch__mdt/fields/Picklist_API_Value__c.field-meta.xml
<CustomField>
    <fullName>Picklist_API_Value__c</fullName>
    <label>Picklist API Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>